# Gadget4

./: Makefile  meson.build  meson_options.txt
buildsystem/: config-cflags.py  config.py  git_version.sh  meson.build  version.template
documentation/: 03_simtypes.md  04_config-options.md  09_special_modules.md
gadget/: meson.build
gadget/include/: meson.build
gadget/include/gadget/: constants.h  debugger.hpp  dtypes.h  hdf5_util.h  idstorage.h  intposconvert.h  io_streamcount.h  lightcone_particle_data.h  linear_growth.h  macros.h  meson.build  mpi_utils.h  parameters.h  particle_data.h  particle_handler.h  peano.h  pinning.h  pm_mpi_fft.h  pm_periodic.h  setcomm.h  sph_particle_data.h  symtensors.h  timebindata.h  utils.h
gadget/include/gadget/addons/: gevolution-pm.hpp  latfield_handler.hpp
gadget/src/: allreduce_debugcheck.cc  allreduce_sparse_double_sum.cc  hdf5_util.cc  hypercube_allgatherv.cc  meson.build  mpi_types.cc  myalltoall.cc  parameters.cc  particle_data.cc  peano.cc  pinning.cc  pm_mpi_fft.cc  pm_periodic.cc  setcomm.cc  sizelimited_sendrecv.cc  sph_particle_data.cc  std_vector.cc  sums_and_minmax.cc  timebindata.cc  utils.cc
half/: meson.build
half/include/: meson.build
half/include/half/: meson.build
md5/: meson.build
md5/include/: meson.build
md5/src/: Md5.cc  meson.build
src/: meson.build
src/cooling_sfr/: cooling.cc  cooling.h  meson.build  sfr_eos.cc  starformation.cc
src/data/: allvars.cc  allvars.h  dtypes.h  intposconvert.h  lcparticles.h  lightcone_massmap_data.h  lightcone_particle_data.h  meson.build  mmparticles.h  mymalloc.cc  mymalloc.h  particle_data.h  simparticles.h  sph_particle_data.h  symtensors.h  test_symtensors.cc
src/debug_md5/: calc_checksum.cc  meson.build
src/domain/: domain.cc  domain.h  domain_balance.cc  domain_box.cc  domain_exchange.cc  domain_toplevel.cc  meson.build
src/fmm/: fmm.cc  fmm.h  meson.build
src/fof/: fof.cc  fof_findgroups.cc  fof_io.cc  fof_nearest.cc  foftree.h  foftree_build.cc  meson.build
src/gravity/: ewald.cc  ewald.h  ewald_test.cc  ewaldtensors.h  grav_direct.cc  grav_external.cc  grav_forcetest.cc  grav_forcetest.h  gravity.cc  meson.build  second_order_ics.cc
src/gravtree/: gravtree.cc  gravtree.h  gravtree_build.cc  gwalk.cc  gwalk.h  meson.build
src/half/: meson.build
src/io/: hdf5_util.cc  io.cc  io.h  meson.build  parameters.cc  parameters.h  restart.cc  restart.h  snap_io.cc  snap_io.h  test_io_bandwidth.cc  test_io_bandwidth.h
src/lightcone/: lightcone.cc  lightcone.h  lightcone_massmap_io.cc  lightcone_massmap_io.h  lightcone_particle_io.cc  lightcone_particle_io.h  meson.build
src/logs/: logs.cc  logs.h  meson.build  timer.h
src/main/: begrun.cc  init.cc  main.cc  meson.build  run.cc  simulation.h
src/mergertree/: descendant.cc  halotrees.cc  io_descendant.cc  io_descendant.h  io_halotrees.cc  io_halotrees.h  io_progenitors.cc  io_progenitors.h  io_readsnap.cc  io_readsnap.h  io_readtrees_mbound.cc  io_readtrees_mbound.h  io_treelinks.cc  io_treelinks.h  mergertree.h  meson.build  postproc_descendants.cc  rearrange.cc
src/mpi_utils/: allreduce_debugcheck.cc  allreduce_sparse_double_sum.cc  generic_comm.h  healthtest.cc  hypercube_allgatherv.cc  meson.build  mpi_types.cc  mpi_utils.h  mpi_vars.cc  myalltoall.cc  shared_mem_handler.cc  shared_mem_handler.h  sizelimited_sendrecv.cc  sums_and_minmax.cc
src/ngbtree/: meson.build  ngbtree.h  ngbtree_build.cc
src/ngenic/: grid.cc  meson.build  ngenic.cc  ngenic.h  power.cc
src/pm/: meson.build  pm.h  pm_mpi_fft.cc  pm_mpi_fft.h  pm_nonperiodic.cc  pm_nonperiodic.h  pm_periodic.cc  pm_periodic.h
src/sort/: cxxsort.h  meson.build  parallel_sort.h  peano.cc  peano.h
src/sph/: artificial_viscosity.cc  density.cc  hydra.cc  init_entropy.cc  kernel.h  meson.build  sph.h
src/subfind/: meson.build  subfind.cc  subfind_density.cc  subfind_distribute.cc  subfind_excursionset.cc  subfind_findlinkngb.cc  subfind_history.cc  subfind_nearesttwo.cc  subfind_orphanids.cc  subfind_processing.cc  subfind_properties.cc  subfind_readid_io.cc  subfind_readid_io.h  subfind_so.cc  subfind_treepotential.cc  subfind_unbind.cc
src/system/: meson.build  system.cc  system.h
src/time_integration/: driftfac.cc  driftfac.h  kicks.cc  meson.build  predict.cc  sim_timestep.cc  timestep.cc  timestep.h  timestep_treebased.cc
src/tree/: meson.build  tree.cc  tree.h
src/vectorclass/: meson.build
vectorclass/: meson.build
vectorclass/include/: meson.build
vectorclass/include/vectorclass/: meson.build  vectorclass.h
vectorclass/src/: instrset_detect.cpp  meson.build
