subdir('cooling_sfr')
subdir('data')
subdir('debug_md5')
subdir('domain')
subdir('fmm')
subdir('fof')
#subdir('gitversion')
subdir('gravity')
subdir('gravtree')
subdir('half')
subdir('io')
subdir('lightcone')
subdir('logs')
subdir('main')
subdir('mergertree')
subdir('mpi_utils')
subdir('ngbtree')
subdir('ngenic')
subdir('pm')
subdir('sort')
subdir('sph')
subdir('subfind')
subdir('system')
subdir('time_integration')
subdir('tree')
