gadget_src = files([
    'vector.cc',
    'pinning.cc',
    'peano.cc',
    'mpi_types.cc',
    'sizelimited_sendrecv.cc',
    'myalltoall.cc',
    'sums_and_minmax.cc',
    'allreduce_debugcheck.cc',
    'hypercube_allgatherv.cc',
    'allreduce_sparse_double_sum.cc',
    'artificial_viscosity.cc',
    'setcomm.cc'])
