gadget_src = files([
    'std_vector.cc',
    'pinning.cc',
    'peano.cc',
    'mpi_types.cc',
    'sizelimited_sendrecv.cc',
    'myalltoall.cc',
    'sums_and_minmax.cc',
    'allreduce_debugcheck.cc',
    'hypercube_allgatherv.cc',
    'allreduce_sparse_double_sum.cc',
    'sph_particle_data.cc',
    'hdf5_util.cc',
    'setcomm.cc'])
