sources += files([
    'allvars.cc',
    'mymalloc.cc',
    'test_symtensors.cc'])
    
headers += files(['allvars.h',
    'constants.h',
    'dtypes.h',
    'idstorage.h',
    'intposconvert.h',
    'lcparticles.h',
    'lightcone_massmap_data.h',
    'lightcone_particle_data.h',
    'mmparticles.h',
    'mymalloc.h',
    'particle_data.h',
    'simparticles.h',
    'sph_particle_data.h',
    'symtensor_indices.h',
    'symtensors.h'])
