sources += files([
    'descendant.cc',
    'halotrees.cc',
    'io_descendant.cc',
    'io_halotrees.cc',
    'io_progenitors.cc',
    'io_readsnap.cc',
    'io_readtrees_mbound.cc',
    'io_treelinks.cc',
    'postproc_descendants.cc',
    'rearrange.cc'])

headers += files([
    'io_treelinks.h',
    'io_readsnap.h',
    'io_readtrees_mbound.h',
    'mergertree.h',
    'io_descendant.h',
    'io_halotrees.h',
    'io_progenitors.h'])
