sources += files([
    'allreduce_debugcheck.cc',
    'allreduce_sparse_double_sum.cc',
    'healthtest.cc',
    'hypercube_allgatherv.cc',
    'mpi_types.cc',
    'mpi_vars.cc',
    'myalltoall.cc',
    'shared_mem_handler.cc',
    'sizelimited_sendrecv.cc',
    'sums_and_minmax.cc'])

headers += files([
    'mpi_utils.h',
    'generic_comm.h',
    'setcomm.h',
    'shared_mem_handler.h'])
