sources += files([
    'subfind.cc',
    'subfind_density.cc',
    'subfind_distribute.cc',
    'subfind_excursionset.cc',
    'subfind_findlinkngb.cc',
    'subfind_history.cc',
    'subfind_nearesttwo.cc',
    'subfind_orphanids.cc',
    'subfind_processing.cc',
    'subfind_properties.cc',
    'subfind_readid_io.cc',
    'subfind_so.cc',
    'subfind_treepotential.cc',
    'subfind_unbind.cc'])

headers += files([
    'subfind.h',
    'subfind_readid_io.h'])
