gadget_headers = files([
    'pinning.h',
    'dtypes.h',
    'macros.h',
    'peano.h',
    'constants.h',
    'mpi_utils.h',
    'idstorage.h',
    'symtensor_indices.h',
    'symtensors.h',
    'sph_particle_data.h',
    'intposconvert.h',
    'io_streamcount.h',
    'hdf5_util.h',
    'setcomm.h'])
