gadget_headers = files([
    'pm_periodic.h',
    'particle_handler.h',
    'linear_growth.h',
    'pinning.h',
    'parameters.h',
    'dtypes.h',
    'macros.h',
    'peano.h',
    'constants.h',
    'mpi_utils.h',
    'idstorage.h',
    'symtensor_indices.h',
    'symtensors.h',
    'sph_particle_data.h',
    'intposconvert.h',
    'io_streamcount.h',
    'hdf5_util.h',
    'setcomm.h',
    'pm_mpi_fft.h',
    'particle_data.h',
    'timebindata.h',
    'lightcone_particle_data.h',
    'utils.h'])
